Fix widow text on smaller devices

--- a/css/src/base.scss
+++ b/css/src/base.scss
@@ -27,6 +27,12 @@ header{
   text-align:justify;
 }
 
+@media(max-width:450px){
+  .wrapper{
+    text-align: center;
+  }
+}
+
 section#intro,
 section#portfolio
 {
@@ -129,6 +135,10 @@ a{
     background:rgba(255,255,255,0.8);
   }
 }
+span.contact_us{
+  display: inline-block;
+}
+
 i{
   color:white;
   border-radius: 3px;
@@ -207,10 +217,10 @@ footer{
     section{
       display:block;
       width: auto;
-      padding:1em;
+      padding:0.5em 0.3em;
       &:first-child,
       &:last-child{
-        padding:1em;
+        padding:1em auto;
       }
     }
   }
